[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
once_cell = "1.19.0"
serde = {version = "1.0.193", features = ["derive"]} 
tokio = {version = "1.35.1", features = ["full"]}
tower = "0.4.13"
tower-http = {version="0.5.0", features=["cors"]}
uuid = {version = "1.6.1", features=["v4"]}

[dev-dependencies]
mockall = "0.12.1"
